@@ -473,6 +473,8 @@ void wxRadioBox::SetString(unsigned int item, const wxString& label)
 
 bool wxRadioBox::Enable( bool enable )
 {
+    bool isEnabled = IsEnabled();
+
     if ( !wxControl::Enable( enable ) )
         return false;
 
@@ -486,6 +488,9 @@ bool wxRadioBox::Enable( bool enable )
         gtk_widget_set_sensitive( GTK_WIDGET(label), enable );
         node = node->GetNext();
     }
+
+    if (!isEnabled && enable)
+        wxGtkFixSensitivity(this);
 
     return true;
 }
