@@ -151,10 +151,15 @@ bool wxRadioButton::GetValue() const
 
 bool wxRadioButton::Enable( bool enable )
 {
+    bool isEnabled = IsEnabled();
+
     if ( !wxControl::Enable( enable ) )
         return FALSE;
 
     gtk_widget_set_sensitive(GTK_BIN(m_widget)->child, enable);
+
+    if (!isEnabled && enable)
+        wxGtkFixSensitivity(this);
 
     return TRUE;
 }
